# stapel-core

./: CHANGELOG.md  CONFIG.MD  CONTRIBUTING.md  MODULE.md  PRESENTERS.MD  README.md  SECURITY.md  __init__.py  conf.py  dev_runserver.sh  gdpr.py  oauth.py  pyproject.toml  ruff.toml  signals.py  testing.py
.githooks/: pre-commit  pre-push
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  publish.yml
access/: __init__.py  audit.py  backend.py  checks.py  conf.py  declaration.py  exceptions.py  levels.py  report.py  roles.py  signals.py  sources.py  stepup.py
bus/: __init__.py  _config.py  base.py  checks.py  consumer.py  event.py  router.py
bus/backends/: kafka.py  memory.py  nats.py  redis_streams.py  routing.py
captcha/: __init__.py  backends.py  conf.py  policy.py
comm/: __init__.py  actions.py  config.py  exceptions.py  functions.py  http.py  nats.py  projections.py  registry.py  schemas.py  tasks.py
config/: __init__.py  checks.py
core/: __init__.py  config.py  jwt_handler.py  language.py  token_blacklist.py  token_manager.py
django/: __init__.py  admin.py  admin_context.py  admin_redirect_middleware.py  apps.py  auth_views.py  authentication.py  backends.py  captcha.py  cdn_ref_sync.py  checks.py  errors.py  groups.py  health.py  jwt_provider.py  mcp.py  middleware.py  models.py  mounts.py  nav.py  nav_checks.py  nav_views.py  openapi.py  openid.py  pagination.py  permissions.py  prodguard.py  revision.py  serializers.py  session_backend.py  settings.py  swagger.py  swappable.py  telegram.py  utils.py  views.py  workspaces.py
django/admin/: __init__.py  base.py  checks.py  conf.py  context.py  mixins.py  redirect.py  registration.py
django/api/: catalog.py  errors.py  pagination.py  permissions.py  presenters.py  revision.py  routers.py  serializers.py
django/cdn/: checks.py  conf.py  fields.py  ref_sync.py
django/eventstore/: admin.py  apps.py  models.py  partitions.py
django/eventstore/management/commands/: eventstore_partition.py  sweep_eventstore.py
django/eventstore/migrations/: 0001_initial.py
django/gateway/: admin.py  apps.py  models.py
django/gateway/migrations/: 0001_initial.py
django/jwt/: authentication.py  backends.py  channels.py  jwt_provider.py  login_views.py  middleware.py  provider.py  session.py  utils.py  views.py
django/management/commands/: access_report.py  check_flows.py  check_translation_catalogs.py  consume_actions.py  generate_error_docs.py  generate_error_keys.py  generate_flow_docs.py  generate_flow_features.py  generate_project_docs.py  presenter_catalog.py  reset_sequences.py  serve_functions.py  staff_group.py  translate_catalogs.py
django/monitoring/: health.py  telegram.py
django/openapi/: __init__.py  extensions.py  mcp.py  schemas.py  swagger.py
django/outbox/: admin.py  apps.py  models.py  relay.py
django/outbox/management/commands/: dispatch_outbox.py
django/outbox/migrations/: 0001_initial.py
django/projections/: apps.py  models.py
django/projections/management/commands/: rebuild_projection.py
django/taskstore/: admin.py  apps.py  models.py
django/taskstore/management/commands/: sweep_tasks.py
django/taskstore/migrations/: 0001_initial.py
django/templates/admin/: base_site.html
django/users/: admin.py  apps.py  models.py  presenters.py
django/users/migrations/: 0001_initial.py  0002_alter_user_managers_alter_user_groups_and_more.py  0003_remove_unique_constraints.py  0004_alter_user_phone.py  0005_alter_user_groups_alter_user_user_permissions.py  0006_user_staff_roles.py  0007_widen_user_avatar.py  0008_alter_user_auth_type.py
docs/examples/auth-flow-features/: README.md
docs/examples/auth-flow-features/en/steps/: flows.steps.ts
docs/examples/auth-flow-features/ru/steps/: flows.steps.ts
docs/examples/auth-flow-features/source/: flows.json
docs/examples/auth-flow-features/source/translations/: flows.en.json  flows.ru.json
eventstore/: __init__.py  base.py  buffer.py  conf.py
eventstore/backends/: __init__.py  postgres.py
flows/: __init__.py  checks.py  conf.py  docs.py  gherkin.py  i18n.py  registry.py
gateway/: __init__.py  audit.py  base.py  conf.py  exceptions.py  functions.py  http.py  network.py  policy.py  ratelimit.py  registry.py  service.py  tokens.py
i18n/: __init__.py  catalogs.py  check.py  conf.py  domains.py  errordocs.py  translate.py
kafka/: __init__.py  config.py  consumer.py  events.py  health.py  producer.py  topics.py
lint/: __init__.py  emit_check.py
media/: __init__.py  conf.py  descriptor.py  drf.py  dto.py  providers.py  types.py  variants.py
netintel/: __init__.py  checks.py  conf.py  providers.py  types.py
notifications/: __init__.py  publish.py  tokens.py
notifications/schemas/emits/: notification.requested.json
secrets/: __init__.py  checks.py  conf.py
static/admin/js/: cdn_image_widget.js  jwt_session.js
tests/: admin_urls.py  conftest.py  flow_urls.py  mounts_surface_urls.py  mounts_urls.py  mounts_urls_prefixed.py  nav_modules_urls.py  test_access.py  test_access_dac_report.py  test_access_stepup.py  test_admin_visibility.py  test_bus.py  test_bus_checks.py  test_bus_config.py  test_bus_nats.py  test_bus_redis_streams.py  test_bus_routing.py  test_captcha.py  test_captcha_mixin.py  test_captcha_policy.py  test_captcha_protected.py  test_cdn_checks.py  test_comm.py  test_comm_projections.py  test_comm_tasks.py  test_comm_tasks_gaps.py  test_conf_gaps.py  test_config.py  test_config_checks.py  test_core_hardening.py  test_cov_api_admin_groups.py  test_cov_api_errors_serializers.py  test_cov_api_openapi.py  test_cov_api_pagination.py  test_cov_api_revision.py  test_cov_infra_bus.py  test_cov_infra_captcha.py  test_cov_infra_cdn.py  test_cov_infra_comm.py  test_cov_infra_django_models.py  (+47 more)
tests/template_stubs/admin/: base.html
verification/: __init__.py  conf.py  decorators.py  errors.py  factors.py  grants.py  policy.py
