[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stapel-core"
version = "0.1.0"
description = "Core Django utilities for the Stapel framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["django", "stapel", "auth", "jwt"]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "Django>=4.2",
    "djangorestframework>=3.14",
    "djangorestframework-dataclasses>=1.2",
    "drf-spectacular>=0.27",
    "django-redis>=5.4",
    "PyJWT>=2.8",
    "cryptography>=41.0",
]

[project.optional-dependencies]
kafka = [
    "confluent-kafka>=2.3",
]
sentry = [
    "sentry-sdk>=1.40",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]
all = [
    "stapel-core[kafka,sentry]",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["stapel_core"]
omit = [
    # Kafka/bus infrastructure — requires running Kafka broker
    "*/bus/_config.py",
    "*/bus/backends/kafka.py",
    "*/kafka/*",
    # Django admin/registration boilerplate
    "*/django/admin.py",
    "*/django/admin_context.py",
    "*/django/admin_redirect_middleware.py",
    "*/users/admin.py",
    # AppConfig — no logic
    "*/django/apps.py",
    # Auth views/backends — tested inside each service
    "*/django/auth_views.py",
    "*/django/backends.py",
    "*/django/session_backend.py",
    # Django model fields, abstract models, groups — tested at service level
    "*/django/fields.py",
    "*/django/models.py",
    "*/django/groups.py",
    # Health check views — trivial HTTP wrappers
    "*/django/health.py",
    # JWT provider singleton — initialized per-service, not package-testable
    "*/django/jwt_provider.py",
    # Management commands — run via CLI, tested at service level
    "*/management/commands/reset_sequences.py",
    "*/management/commands/staff_group.py",
    # MCP, OpenAPI, Swagger — schema generation wrappers
    "*/django/mcp.py",
    "*/django/openapi.py",
    "*/django/openid.py",
    "*/django/swagger.py",
    # Pagination, revision — complex DRF wrappers, tested in services
    "*/django/pagination.py",
    "*/django/revision.py",
    # URL routing boilerplate
    "*/django/routers.py",
    # Per-service settings module
    "*/django/settings.py",
    # External service integrations — require running services
    "*/django/telegram.py",
    "*/django/workspaces.py",
    "*/django/views.py",
    "*/notifications/*",
    # GDPR — external data export, tested at service level
    "*/gdpr.py",
    # Language utilities — tested at service level
    "*/core/language.py",
    # Migrations — auto-generated
    "*/migrations/*",
    # Test helper itself
    "*/testing.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.setuptools]
package-dir = {"stapel_core" = "."}
packages = [
    "stapel_core",
    "stapel_core.bus",
    "stapel_core.bus.backends",
    "stapel_core.core",
    "stapel_core.django",
    "stapel_core.django.jwt",
    "stapel_core.django.api",
    "stapel_core.django.cdn",
    "stapel_core.django.monitoring",
    "stapel_core.django.admin",
    "stapel_core.django.openapi",
    "stapel_core.django.management",
    "stapel_core.django.management.commands",
    "stapel_core.django.users",
    "stapel_core.django.users.migrations",
    "stapel_core.kafka",
    "stapel_core.notifications",
]
