[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stapel-core"
version = "0.1.0"
description = "Core Django utilities for the Stapel framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["django", "stapel", "auth", "jwt"]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "Django>=5.1",
    "djangorestframework>=3.14",
    "djangorestframework-dataclasses>=1.2",
    "drf-spectacular>=0.27",
    "django-redis>=5.4",
    "PyJWT>=2.8",
    "cryptography>=41.0",
    "requests>=2.31",
]

[project.optional-dependencies]
kafka = [
    "confluent-kafka>=2.3",
]
nats = [
    # filter_subjects in ConsumerConfig needs nats-py 2.9+ (server 2.10+)
    "nats-py>=2.9",
]
sentry = [
    "sentry-sdk>=1.40",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]
all = [
    "stapel-core[kafka,nats,sentry]",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short -q --import-mode=importlib"

[tool.coverage.run]
source = ["stapel_core"]
omit = [
    # Kafka/bus infrastructure — requires running Kafka broker
    "*/bus/_config.py",
    "*/bus/backends/kafka.py",
    "*/kafka/*",
    # AppConfig — no logic
    "*/django/apps.py",
    # Users admin — trivial Django admin registration
    "*/django/users/admin.py",
    # JWT provider top-level shim — re-export, tested via the real module
    "*/django/jwt_provider.py",
    # Per-service settings module — wired per deployment, not package-testable
    "*/django/settings.py",
    # Management commands — run via CLI, tested at service level
    "*/management/commands/reset_sequences.py",
    "*/management/commands/staff_group.py",
    # External service integrations — require running services
    "*/django/workspaces.py",
    "*/notifications/*",
    # GDPR — external data export, tested at service level
    "*/gdpr.py",
    # Language utilities — tested at service level
    "*/core/language.py",
    # Migrations — auto-generated
    "*/migrations/*",
    # Test helper itself
    "*/testing.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.setuptools]
package-dir = {"stapel_core" = "."}
packages = [
    "stapel_core",
    "stapel_core.bus",
    "stapel_core.bus.backends",
    "stapel_core.captcha",
    "stapel_core.core",
    "stapel_core.django",
    "stapel_core.django.jwt",
    "stapel_core.django.api",
    "stapel_core.django.cdn",
    "stapel_core.django.monitoring",
    "stapel_core.django.admin",
    "stapel_core.django.openapi",
    "stapel_core.django.management",
    "stapel_core.django.management.commands",
    "stapel_core.django.users",
    "stapel_core.django.users.migrations",
    "stapel_core.django.outbox",
    "stapel_core.django.outbox.migrations",
    "stapel_core.django.outbox.management",
    "stapel_core.django.outbox.management.commands",
    "stapel_core.django.taskstore",
    "stapel_core.django.taskstore.migrations",
    "stapel_core.django.taskstore.management",
    "stapel_core.django.taskstore.management.commands",
    "stapel_core.comm",
    "stapel_core.kafka",
    "stapel_core.notifications",
]

[tool.setuptools.package-data]
"stapel_core" = ["migrations/*.py", "django/templates/**/*", "static/**/*", "py.typed"]
