[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stapel-core"
version = "0.8.0"
description = "Core Django utilities for the Stapel framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["django", "stapel", "auth", "jwt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

dependencies = [
    "Django>=5.1",
    "djangorestframework>=3.14",
    "djangorestframework-dataclasses>=1.2",
    "drf-spectacular>=0.27",
    "django-cors-headers>=4.3",
    "django-redis>=5.4",
    "PyJWT>=2.8",
    "cryptography>=41.0",
    "requests>=2.31",
    "phonenumbers>=8.13",
]

[project.optional-dependencies]
kafka = [
    "confluent-kafka>=2.3",
]
nats = [
    # filter_subjects in ConsumerConfig needs nats-py 2.9+ (server 2.10+)
    "nats-py>=2.9",
]
sentry = [
    "sentry-sdk>=1.40",
]
# MaxMindProvider (stapel_core.netintel) — offline GeoLite2/GeoIP2 lookups
netintel-maxmind = [
    "geoip2>=4.7",
]
# Privilege gateway (stapel_core.gateway) — mandatory verb-args validation
gateway = [
    "jsonschema>=4.18",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    # celery executor is an optional runtime path (guarded import in
    # comm/tasks.py); the test suite exercises that branch.
    "celery>=5.3",
]
all = [
    "stapel-core[kafka,nats,sentry,netintel-maxmind,gateway]",
]

[project.urls]
Homepage = "https://github.com/usestapel/stapel-core"
Repository = "https://github.com/usestapel/stapel-core"
Documentation = "https://github.com/usestapel/stapel-core#readme"
Changelog = "https://github.com/usestapel/stapel-core/blob/main/CHANGELOG.md"
Issues = "https://github.com/usestapel/stapel-core/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short -q --import-mode=importlib"

[tool.coverage.run]
source = ["stapel_core"]
omit = [
    # Kafka/bus infrastructure — requires running Kafka broker
    "*/bus/_config.py",
    "*/bus/backends/kafka.py",
    "*/kafka/*",
    # AppConfig — no logic
    "*/django/apps.py",
    # Users admin — trivial Django admin registration
    "*/django/users/admin.py",
    # JWT provider top-level shim — re-export, tested via the real module
    "*/django/jwt_provider.py",
    # Per-service settings module — wired per deployment, not package-testable
    "*/django/settings.py",
    # Management commands — run via CLI, tested at service level
    "*/management/commands/reset_sequences.py",
    "*/management/commands/staff_group.py",
    # External service integrations — require running services
    "*/django/workspaces.py",
    "*/notifications/*",
    # GDPR — external data export, tested at service level
    "*/gdpr.py",
    # Language utilities — tested at service level
    "*/core/language.py",
    # Migrations — auto-generated
    "*/migrations/*",
    # Test helper itself
    "*/testing.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.setuptools]
package-dir = {"stapel_core" = "."}
packages = [
    "stapel_core",
    "stapel_core.access",
    "stapel_core.bus",
    "stapel_core.bus.backends",
    "stapel_core.captcha",
    "stapel_core.core",
    "stapel_core.django",
    "stapel_core.django.jwt",
    "stapel_core.django.api",
    "stapel_core.django.cdn",
    "stapel_core.django.monitoring",
    "stapel_core.django.admin",
    "stapel_core.django.openapi",
    "stapel_core.django.management",
    "stapel_core.django.management.commands",
    "stapel_core.django.users",
    "stapel_core.django.users.migrations",
    "stapel_core.django.outbox",
    "stapel_core.django.outbox.migrations",
    "stapel_core.django.outbox.management",
    "stapel_core.django.outbox.management.commands",
    "stapel_core.django.taskstore",
    "stapel_core.django.taskstore.migrations",
    "stapel_core.django.taskstore.management",
    "stapel_core.django.taskstore.management.commands",
    "stapel_core.django.eventstore",
    "stapel_core.django.eventstore.migrations",
    "stapel_core.django.eventstore.management",
    "stapel_core.django.eventstore.management.commands",
    "stapel_core.django.gateway",
    "stapel_core.django.gateway.migrations",
    "stapel_core.gateway",
    "stapel_core.eventstore",
    "stapel_core.eventstore.backends",
    "stapel_core.comm",
    "stapel_core.flows",
    "stapel_core.i18n",
    "stapel_core.lint",
    "stapel_core.netintel",
    "stapel_core.secrets",
    "stapel_core.verification",
    "stapel_core.kafka",
    "stapel_core.notifications",
]

[tool.setuptools.package-data]
"stapel_core" = ["migrations/*.py", "django/templates/**/*", "static/**/*", "py.typed", "notifications/schemas/**/*.json"]
